--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">JetNote</string>
+    <string name="note_screen_top_bar">Jet Note App Test</string>
 </resources>
