--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">JetNote</string>
     <string name="note_screen_top_bar">Jet Note App Test</string>
+    <string name="note_details_top_bar">Details</string>
 </resources>
